[gd_scene load_steps=33 format=2]

[ext_resource path="res://ui/theme.tres" type="Theme" id=1]
[ext_resource path="res://editor/inventory_item.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/aabb_camera.gd" type="Script" id=3]
[ext_resource path="res://editor/block_layer.gd" type="Script" id=4]
[ext_resource path="res://editor/garage_todo_text.png" type="Texture" id=6]
[ext_resource path="res://addons/crosshairs/image0018.png" type="Texture" id=7]
[ext_resource path="res://editor/floor_material.tres" type="Material" id=8]
[ext_resource path="res://editor/inventory.gd" type="Script" id=9]
[ext_resource path="res://editor/block_face_highlighter_material.tres" type="Material" id=10]
[ext_resource path="res://editor/editor_environment.tres" type="Environment" id=11]
[ext_resource path="res://editor/block_face_highlighter.gd" type="Script" id=12]
[ext_resource path="res://core/shortcut/ui_cancel.tres" type="ShortCut" id=13]
[ext_resource path="res://start_menu/main.tscn" type="PackedScene" id=14]
[ext_resource path="res://settings/settings_blur.tscn" type="PackedScene" id=15]
[ext_resource path="res://editor/floor.gd" type="Script" id=16]
[ext_resource path="res://ui/blur_material.tres" type="Material" id=17]
[ext_resource path="res://editor/block_layer_view.gd" type="Script" id=19]
[ext_resource path="res://editor/color_picker.gd" type="Script" id=20]
[ext_resource path="res://editor/editor.gd" type="Script" id=21]
[ext_resource path="res://editor/block_base_material.tres" type="Material" id=22]
[ext_resource path="res://core/thumbnail/mock_cube.tres" type="CubeMesh" id=23]
[ext_resource path="res://addons/flowcontainer.gd" type="Script" id=24]
[ext_resource path="res://editor/color_button.tscn" type="PackedScene" id=28]
[ext_resource path="res://ui/cancel_button.tscn" type="PackedScene" id=30]

[sub_resource type="SpatialMaterial" id=1]

[sub_resource type="SpatialMaterial" id=2]
params_cull_mode = 1

[sub_resource type="CubeMesh" id=3]
size = Vector3( 45.5, 31.5, 45.5 )

[sub_resource type="PlaneMesh" id=4]
custom_aabb = AABB( 0, 0, 0, 25, 0, 25 )
size = Vector2( 1, 1 )

[sub_resource type="QuadMesh" id=5]
size = Vector2( 1.25, 1.25 )

[sub_resource type="CylinderMesh" id=6]
top_radius = 0.001
bottom_radius = 0.5
height = 1.0

[sub_resource type="InputEventAction" id=7]
action = "editor_open_colorpicker"

[sub_resource type="ShortCut" id=8]
shortcut = SubResource( 7 )

[node name="Designer" type="Node"]
pause_mode = 2
script = ExtResource( 21 )
main_menu = ExtResource( 14 )
material = ExtResource( 22 )

[node name="Camera" type="Camera" parent="."]
process_priority = -1
transform = Transform( -1, -1.5632e-13, -3.25842e-07, -1.62921e-07, 0.866025, 0.5, 2.82187e-07, 0.5, -0.866025, 10, 5.09171, 0 )
cull_mask = 1
far = 200.0
script = ExtResource( 3 )
speed = 10.0
angular_speed = 0.01
always_capture = true
actions = PoolStringArray( "editor_move_left", "editor_move_right", "editor_move_forward", "editor_move_back", "editor_move_up", "editor_move_down" )
limit_tilt = true
aabb = AABB( -10, 0.55, -10, 45, 30, 45 )

[node name="RT" type="RemoteTransform" parent="Camera"]
transform = Transform( -1, -1.62921e-07, 2.82187e-07, -1.42109e-13, 0.866025, 0.5, -3.25842e-07, 0.5, -0.866025, 10, -4.40955, -2.54585 )
remote_path = NodePath("../Box/Viewport/Camera")

[node name="Box" type="ViewportContainer" parent="Camera"]
anchor_right = 1.0
anchor_bottom = 1.0
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="Camera/Box"]
size = Vector2( 1920, 1080 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3
gui_disable_input = true

[node name="Camera" type="Camera" parent="Camera/Box/Viewport"]
process_priority = 1
transform = Transform( 1, 5.68434e-14, -1.13687e-13, -1.98952e-13, 1, -2.98023e-08, 3.41061e-13, 2.98023e-08, 1, 9.53674e-07, 9.53674e-07, -2.6226e-06 )
cull_mask = 2147483776

[node name="Mesh" type="MeshInstance" parent="Camera/Box/Viewport/Camera"]
pause_mode = 1
transform = Transform( 0.945729, -0.0479753, 0.321394, 0.163176, 0.925416, -0.34202, -0.281015, 0.375902, 0.883022, 0.675385, -0.287656, -0.690228 )
layers = 128
mesh = ExtResource( 23 )
material/0 = SubResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 11 )

[node name="Room" type="Spatial" parent="."]

[node name="BoxOfClaustrophobia" type="MeshInstance" parent="Room"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.5, 15, 12.5 )
visible = false
material_override = SubResource( 2 )
mesh = SubResource( 3 )
material/0 = null

[node name="Lights" type="Node" parent="Room"]

[node name="-X-Y" type="SpotLight" parent="Room/Lights"]
transform = Transform( -0.707107, 0.5, -0.5, 0, 0.707107, 0.707107, 0.707107, 0.5, -0.5, -9.75, 30.5, -10 )
layers = 1048575
light_energy = 0.3
spot_range = 92.2871

[node name="-XY" type="SpotLight" parent="Room/Lights"]
transform = Transform( 0.707107, 0.5, -0.5, 0, 0.707107, 0.707107, 0.707107, -0.5, 0.5, -9.75, 30.5, 34.75 )
layers = 1048575
light_energy = 0.5
spot_range = 92.2871

[node name="X-Y" type="SpotLight" parent="Room/Lights"]
transform = Transform( 0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 35, 30.5, 34.75 )
layers = 1048575
light_energy = 0.3
spot_range = 92.2871

[node name="XY" type="SpotLight" parent="Room/Lights"]
transform = Transform( -0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, 0.5, -0.5, 35, 30.5, -10 )
layers = 1048575
light_energy = 0.3
spot_range = 92.2871

[node name="Sun" type="SpotLight" parent="Room/Lights"]
transform = Transform( 0.873613, 0, 0.486621, 0, 1, 0, -0.486621, 0, 0.873613, 44.375, 0, 75.75 )
layers = 1048575
spot_range = 161.345
spot_angle = 41.5913

[node name="TODO text" type="Sprite3D" parent="Room"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.2097, 6.5, -13.3234 )
texture = ExtResource( 6 )

[node name="Floor" type="MeshInstance" parent="."]
material_override = ExtResource( 8 )
mesh = SubResource( 4 )
material/0 = null
script = ExtResource( 16 )

[node name="Origin" type="Spatial" parent="Floor"]
pause_mode = 1
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.5, 0.5 )

[node name="Ghost" type="MeshInstance" parent="Floor/Origin"]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 0, -1 )

[node name="BlockFaceHighlighter" type="Spatial" parent="."]
transform = Transform( -4.37114e-08, 4.37114e-08, -1, 1, -4.37114e-08, -4.37114e-08, -4.37114e-08, -1, -4.37114e-08, 0.5, 0, 0.5 )
script = ExtResource( 12 )

[node name="Mesh" type="MeshInstance" parent="BlockFaceHighlighter"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.001, 0, 0 )
material_override = ExtResource( 10 )
mesh = SubResource( 5 )
material/0 = null

[node name="MagicDebuggingConeOfLife" type="MeshInstance" parent="BlockFaceHighlighter"]
visible = false
mesh = SubResource( 6 )
material/0 = null

[node name="HUD" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.22461
margin_top = 3.07907
margin_right = -1.22461
margin_bottom = 3.0791
theme = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Crosshair" type="TextureRect" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 7 )

[node name="BlockLayer" type="OptionButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -100.0
margin_top = 18.0791
margin_right = -18.0
margin_bottom = 63.0791
focus_mode = 0
theme = ExtResource( 1 )
toggle_mode = false
enabled_focus_mode = 0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlockLayerView" type="OptionButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -100.0
margin_top = 80.0
margin_right = -18.0
margin_bottom = 125.0
focus_mode = 0
theme = ExtResource( 1 )
toggle_mode = false
enabled_focus_mode = 0
script = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveTimer" type="Timer" parent="."]
wait_time = 60.0
autostart = true

[node name="Settings" parent="." instance=ExtResource( 15 )]

[node name="Menu" type="ColorRect" parent="."]
visible = false
material = ExtResource( 17 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -200.0
margin_right = 160.0
margin_bottom = 200.0
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="Menu/VBoxContainer"]
margin_top = 127.0
margin_right = 320.0
margin_bottom = 156.0
shortcut = ExtResource( 13 )
text = "Continue"

[node name="Test" type="Button" parent="Menu/VBoxContainer"]
margin_top = 166.0
margin_right = 320.0
margin_bottom = 195.0
text = "Test"

[node name="Settings" type="Button" parent="Menu/VBoxContainer"]
margin_top = 205.0
margin_right = 320.0
margin_bottom = 234.0
text = "Settings"

[node name="Exit" type="Button" parent="Menu/VBoxContainer"]
margin_top = 244.0
margin_right = 320.0
margin_bottom = 273.0
text = "Exit"

[node name="Inventory" type="ColorRect" parent="."]
material = ExtResource( 17 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="PanelContainer" parent="Inventory"]
anchor_right = 0.95
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = -40.0
margin_bottom = -40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer" type="ViewportContainer" parent="Inventory/Panel"]
modulate = Color( 1, 1, 1, 0.498039 )
margin_left = 4.0
margin_top = 4.0
margin_right = 1740.0
margin_bottom = 996.0
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="Inventory/Panel/ViewportContainer"]
pause_mode = 1
size = Vector2( 1736, 992 )
own_world = true
transparent_bg = true
handle_input_locally = false
msaa = 4
usage = 3
render_target_update_mode = 3
gui_disable_input = true

[node name="Camera" type="Camera" parent="Inventory/Panel/ViewportContainer/Viewport"]
transform = Transform( 0.642788, -0.323744, 0.694272, 0, 0.906308, 0.422618, -0.766044, -0.271654, 0.582563, 0.6838, 0.4475, 0.572 )
fov = 30.0

[node name="DirectionalLight" type="DirectionalLight" parent="Inventory/Panel/ViewportContainer/Viewport"]
transform = Transform( 0.866025, -0.17101, 0.469846, 0, 0.939693, 0.34202, -0.5, -0.296198, 0.813798, 0, 0, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Inventory/Panel/ViewportContainer/Viewport"]
pause_mode = 1
mesh = ExtResource( 23 )
material/0 = null

[node name="Inventory" type="VBoxContainer" parent="Inventory/Panel"]
margin_left = 4.0
margin_top = 4.0
margin_right = 1740.0
margin_bottom = 996.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
preview_mesh = NodePath("../ViewportContainer/Viewport/MeshInstance")
block_item = ExtResource( 2 )
_category_list = NodePath("Box/Categories/Box")
_block_list = NodePath("Box/Blocks/Box")

[node name="Box" type="HBoxContainer" parent="Inventory/Panel/Inventory"]
margin_right = 1736.0
margin_bottom = 992.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Categories" type="ScrollContainer" parent="Inventory/Panel/Inventory/Box"]
margin_right = 200.0
margin_bottom = 992.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="Box" type="VBoxContainer" parent="Inventory/Panel/Inventory/Box/Categories"]
margin_right = 200.0
margin_bottom = 992.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 3

[node name="Blocks" type="ScrollContainer" parent="Inventory/Panel/Inventory/Box"]
margin_left = 204.0
margin_right = 1736.0
margin_bottom = 992.0
size_flags_horizontal = 3

[node name="Box" type="GridContainer" parent="Inventory/Panel/Inventory/Box/Blocks"]
margin_right = 1532.0
margin_bottom = 992.0
size_flags_horizontal = 15
size_flags_vertical = 15
custom_constants/vseparation = 0
custom_constants/hseparation = 0
script = ExtResource( 24 )

[node name="Cancel" parent="Inventory" instance=ExtResource( 30 )]

[node name="Hidden cancel" type="ToolButton" parent="Inventory"]
margin_right = 8.0
margin_bottom = 29.0
shortcut = SubResource( 8 )

[node name="ColorPicker" type="ColorRect" parent="."]
visible = false
material = ExtResource( 17 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}
button = ExtResource( 28 )
_list = NodePath("Box/Box")

[node name="Box" type="PanelContainer" parent="ColorPicker"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -200.0
margin_right = 160.0
margin_bottom = 200.0
grow_horizontal = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Box" type="GridContainer" parent="ColorPicker/Box"]
margin_left = 4.0
margin_top = 4.0
margin_right = 316.0
margin_bottom = 396.0
custom_constants/vseparation = 3
custom_constants/hseparation = 3
columns = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cancel" parent="ColorPicker" instance=ExtResource( 30 )]

[node name="Hidden cancel" type="ToolButton" parent="ColorPicker"]
margin_right = 8.0
margin_bottom = 29.0
shortcut = SubResource( 8 )
[connection signal="item_selected" from="BlockLayer" to="." method="_on_BlockLayer_item_selected"]
[connection signal="item_selected" from="BlockLayerView" to="." method="_on_BlockLayerView_item_selected"]
[connection signal="timeout" from="SaveTimer" to="." method="save_vehicle"]
[connection signal="pressed" from="Menu/VBoxContainer/Continue" to="." method="set_enabled" binds= [ true ]]
[connection signal="pressed" from="Menu/VBoxContainer/Test" to="." method="_on_Designer_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Settings" to="Settings" method="set_visible" binds= [ true ]]
[connection signal="pressed" from="Menu/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="hide" from="Inventory" to="." method="set_enabled" binds= [ true ]]
[connection signal="pressed" from="Inventory/Cancel" to="Inventory" method="set_visible" binds= [ false ]]
[connection signal="pressed" from="Inventory/Hidden cancel" to="Inventory" method="set_visible" binds= [ false ]]
[connection signal="hide" from="ColorPicker" to="." method="set_enabled" binds= [ true ]]
[connection signal="pick_color" from="ColorPicker" to="." method="_on_ColorPicker_pick_color"]
[connection signal="pressed" from="ColorPicker/Cancel" to="ColorPicker" method="set_visible" binds= [ false ]]
[connection signal="pressed" from="ColorPicker/Hidden cancel" to="ColorPicker" method="set_visible" binds= [ false ]]
